--- a/Food_Insecurity_Project.ipynb
+++ b/Food_Insecurity_Project.ipynb
@@ -27,7 +27,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This file includes data cleaning and tranformation steps and some initial exploratory analysis of the data sets used to analyze factors relevant to food insecurity in Kansas City, MO. Additional analysis of the data was done using SQL in BigQuery. The report is here located: https://github.com/GiavannaFranklin/Food-Insecurity-Project"
+        "This file includes data cleaning and tranformation steps and some initial exploratory analysis of the data sets used to analyze factors relevant to food insecurity in Kansas City, MO. Additional analysis of the data was done using SQL in BigQuery. The report is located here: https://github.com/GiavannaFranklin/Food-Insecurity-Project"
       ],
       "metadata": {
         "id": "7dWWfGd4wpgW"
